# detectron2

./: pyproject.toml
demo/: demo.py  measure_time.py  predictor.py
detectron2/modeling/meta_arch/: rcnn.py
detectron2/utils/: time_measurement.py  visualizer.py
