[tool.poetry]
name = "detectron2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
torchvision = "^0.5.0"
opencv-python = "^4.2.0"
cython = "^0.29.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
